# PicoPet

./: .gitattributes  .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  settings.html  vite.config.ts
.superpowers/sdd/: final-fix-report.md  final-review-fix-report.md  task-10-report.md  task-6-report.md  task-8-report.md
docs/qa/: memory-baseline.2026-06-23-beta.json  memory-baseline.2026-06-24-portable-main.json  memory-baseline.md  windows-alpha-acceptance-2026-06-23.md  windows-alpha-checklist.md  windows-beta-checklist.md  windows-beta-portable-data-acceptance-2026-06-24.md  windows-installer-checklist.md  windows-mvp-checklist.md  windows-v0.2.1-checklist.md  windows-v0.3-settings-acceptance-2026-06-27.md  windows-v0.3-settings-checklist.md  windows-v0.3.1-maintenance-checklist.md  windows-v0.4-behavior-expression-checklist.md  (+1 more)
scripts/: assert-windows-artifacts.ps1  assert-windows-gui-subsystem.ps1  generate-placeholder-spritesheet.mjs  package-windows-portable.ps1  windows-memory-baseline.ps1  windows-release-gate.ps1  windows-release-smoke.ps1
src/: app.test.ts  app.ts  main.ts  settings.css  settings.test.ts  settings.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  diagnostics.rs  lib.rs  logging.rs  main.rs  main_window.rs  maintenance.rs  portable_data.rs  settings_window.rs  state.rs  tray.rs  window_position.rs  window_state.rs
src-tauri/src/platform/: mod.rs  windows.rs  windows_autostart.rs
src-tauri/tests/: windows_subsystem.rs
(+42 files in other folders)
